Fix sticky issue, only set overflow on body

--- a/next/themes/plastichabitat/source/css/_base.styl
+++ b/next/themes/plastichabitat/source/css/_base.styl
@@ -6,6 +6,9 @@ html, body
   margin: 0
   padding: 0
 
+body
+  overflow-x: hidden // Prevent layout overflow on mobile
+
 *, *:before, *:after
   box-sizing: border-box
 
